Remove Greg MariadDB code * it's now handled directly in MySqlJdbcUrlCreator